Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/6486430/T6486430a.out
T6486430a.java:10:31: compiler.err.cant.select.static.class.from.param.type
1 error
